# codex

.github/workflows/: entra-release.yml  entra-version.yml
codex-rs/: Cargo.toml
codex-rs/app-server/: README.md
codex-rs/app-server-protocol/schema/json/: ServerNotification.json  codex_app_server_protocol.schemas.json  codex_app_server_protocol.v2.schemas.json
codex-rs/app-server-protocol/src/protocol/: v2.rs
codex-rs/app-server/src/: codex_message_processor.rs
codex-rs/core/: Cargo.toml
codex-rs/core/src/: api_bridge.rs  azure_auth.rs  azure_model_catalog.rs  codex.rs  codex_tests.rs  lib.rs  mcp_openai_file.rs  mcp_tool_call.rs  mcp_tool_call_tests.rs  model_provider_info.rs  model_provider_info_tests.rs  openai_files.rs  realtime_conversation.rs  thread_manager.rs
codex-rs/core/src/config/: config_tests.rs  mod.rs
codex-rs/core/src/context_manager/: history.rs
codex-rs/core/src/guardian/: review_session.rs
codex-rs/core/src/plugins/: manager.rs  manager_tests.rs
codex-rs/core/src/state/: session.rs
codex-rs/core/src/tools/: router.rs  router_tests.rs  spec.rs  spec_tests.rs
codex-rs/core/tests/suite/: auth_refresh.rs  hooks.rs
codex-rs/login/src/: api_bridge.rs
codex-rs/model-provider-info/: Cargo.toml
codex-rs/model-provider-info/src/: azure_auth.rs  azure_model_catalog.rs  lib.rs  model_provider_info_tests.rs
codex-rs/protocol/src/: protocol.rs
codex-rs/tui/src/: chatwidget.rs
codex-rs/tui_app_server/src/: chatwidget.rs
codex-rs/utils/azure-catalog/: Cargo.toml
codex-rs/utils/azure-catalog/src/: lib.rs
docs/: config.md
(+6 files in other folders)
