[package]
edition.workspace = true
license.workspace = true
name = "codex-model-provider-info"
version.workspace = true

[lib]
doctest = false
name = "codex_model_provider_info"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
codex-api = { workspace = true }
codex-app-server-protocol = { workspace = true }
codex-protocol = { workspace = true }
codex-utils-azure-catalog = { workspace = true }
http = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

[dev-dependencies]
codex-utils-absolute-path = { workspace = true }
maplit = { workspace = true }
pretty_assertions = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
